ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__C_P_Data1__c/CnP_PaaS__C_P_Data1__c.object-meta.xml
<CustomObject>
    <label>Deprecated C&amp;P Data Import</label>
    <nameField>
        <displayFormat>Transaction-{000}</displayFormat>
        <label>C&amp;P Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deprecated C&amp;P Data Import</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>