ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__C_P_Data1__c/fields/CnP_PaaS__CnP_Data_ID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Data_ID__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>CnP Data ID</label>
    <type>AutoNumber</type>
</CustomField>