ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__C_P_Data1__c/fields/CnP_PaaS__DataXML__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__DataXML__c</fullName>
    <label>DataXML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>