ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__C_P_Data1__c/fields/CnP_PaaS__Email__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email</label>
    <type>Checkbox</type>
</CustomField>