ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__C_P_Data1__c/fields/CnP_PaaS__Total_Charged__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Total_Charged__c</fullName>
    <label>Total Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>