ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__C_P_Data1__c/fields/CnP_PaaS__Transaction_Result__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Transaction_Result__c</fullName>
    <label>Transaction Result</label>
    <length>250</length>
    <type>Text</type>
</CustomField>